--- a/config.yaml
+++ b/config.yaml
@@ -13,8 +13,8 @@ aigateway:
   credential: "credential3"
 
 server:
-  port: 8080
+  port: 8099
   mode: "debug"
 
 scheduler:
-  scan_interval: "0 0 * * * *" # 每小时扫描一次
+  scan_interval: "0 0 * * * *" # Scan every hour
