--- a/test/aigateway-mock/Dockerfile
+++ b/test/aigateway-mock/Dockerfile
@@ -13,7 +13,7 @@ RUN go mod download
 COPY . .
 
 # Build application
-RUN CGO_ENABLED=0 GOOS=linux go build -a -installsuffix cgo -o main cmd/main.go
+RUN CGO_ENABLED=0 GOOS=linux go build -a -installsuffix cgo -o main main.go
 
 # Run stage
 FROM alpine:latest
@@ -24,10 +24,9 @@ WORKDIR /app
 
 # Copy binary from build stage
 COPY --from=builder /app/main .
-COPY --from=builder /app/config.yaml .
 
 # Expose port
-EXPOSE 8080
+EXPOSE 1002
 
 # Run application
 CMD ["./main"]
