--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
 
   aigateway-mock:
     build:
-      context: ../aigateway-mock
+      context: ./scripts/aigateway-mock
       dockerfile: Dockerfile
     container_name: aigateway_mock
     ports:
