feat: support quota transfer (#1)

--- a/config.yaml
+++ b/config.yaml
@@ -15,6 +15,10 @@ aigateway:
 server:
   port: 8099
   mode: "debug"
+  token_header: "authorization"
 
 scheduler:
   scan_interval: "0 0 * * * *" # Scan every hour
+
+voucher:
+  signing_key: "your-secret-signing-key-at-least-32-bytes-long-for-security"
