--- a/test/config.yaml
+++ b/test/config.yaml
@@ -20,7 +20,8 @@ auth_database:
   sslmode: "disable"
 
 aigateway:
-  base_url: "http://localhost:8002"
+  host: "127.0.0.1"
+  port: 8002
   admin_path: "/v1/chat/completions"
   auth_header: "x-admin-key"
   auth_value: "12345678"
