feat: add star status when get user quota

--- a/config.yaml
+++ b/config.yaml
@@ -37,8 +37,12 @@ log:
   level: "warn"
 
 employee_sync:
-  enabled: true
+  enabled: false
   hr_url: "http://localhost:8099/api/hr/employees"
   hr_key: "test-hr-key"
   dept_url: "http://localhost:8099/api/hr/departments"
   dept_key: "test-dept-key"
+
+github_star_check:
+  enabled: false
+  required_repo: "zgsm-ai.costrict"
